# zxing-cpp-wasm

./: .gitignore  CMakeLists.txt
emscripten/: README.md  exports.cpp
emscripten/zxing-cpp-example/: .gitignore  package.json
emscripten/zxing-cpp-example/public/: img_0.jfif  img_1.jfif  img_10.jfif  img_11.jfif  img_12.jfif  img_13.jfif  img_14.jfif  img_15.jfif  img_16.jfif  img_2.jfif  img_3.jfif  img_4.jfif  img_5.jfif  img_6.jfif  img_7.jfif  img_8.jfif  img_9.jfif
emscripten/zxing-cpp-example/src/: App.js
emscripten/zxing-cpp-example/src/components/: image.js  imageScanner.js  list.js  zxing.js
emscripten/zxing-cpp-example/src/controller/: scan.js
emscripten/zxing-cpp-example/src/utils/: promises.js
